Update: 애니메이션 설정을 false로 변경하고 corruption 옵션 추가

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -109,8 +109,18 @@
   &quot;classCount&quot;: 5,
   &quot;classWidth&quot;: 10,
   &quot;canvasSize&quot;: 800,
-  &quot;animation&quot;: true,
+  &quot;animation&quot;: false,
   &quot;options&quot;: {
+    &quot;corruption&quot;: {
+        &quot;enabled&quot;: true,
+        &quot;cells&quot;: [&quot;1-1:2-3&quot;],
+        &quot;maskAxisLabels&quot;: true,
+        &quot;style&quot;: {
+            &quot;edgeComplexity&quot;: 0.7,
+            &quot;transparent&quot;: true,
+            &quot;fiberEnabled&quot;: true
+        }
+    },
     &quot;congruentTriangles&quot;: {
         &quot;enabled&quot;: true,
         &quot;boundary&quot;: 7
