--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,43 +99,20 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
-  &quot;classRange&quot;: {
-    &quot;firstEnd&quot;: 1,
-    &quot;secondEnd&quot;: 3,
-    &quot;lastStart&quot;: 13
-  },
+&quot;purpose&quot;: &quot;table&quot;,
+  &quot;data&quot;: [162, 178, 175, 174, 189, 186, 183, 183, 181, 197, 194, 191, 190, 209, 205],
+  &quot;canvasWidth&quot;: 700,
   &quot;classCount&quot;: 5,
   &quot;classWidth&quot;: 10,
-  &quot;canvasSize&quot;: 800,
-  &quot;animation&quot;: false,
-  &quot;options&quot;: {
-    &quot;corruption&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;cells&quot;: [&quot;1-1:2-3&quot;],
-        &quot;maskAxisLabels&quot;: true,
-        &quot;style&quot;: {
-            &quot;edgeComplexity&quot;: 0.7,
-            &quot;transparent&quot;: true,
-            &quot;fiberEnabled&quot;: true
-        }
-    },
-    &quot;congruentTriangles&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;boundary&quot;: 7
-    },
-    &quot;showHistogram&quot;: true,
-    &quot;showPolygon&quot;: true,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;histogramColorPreset&quot;: &quot;default&quot;,
-    &quot;polygonColor&quot;: {
-        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
-        &quot;point&quot;: &quot;#8DCF66&quot;
-        },
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(점)&quot;,
-      &quot;yAxis&quot;: &quot;(명)&quot;
+  &quot;anmation&quot;: false,
+  &quot;options&quot; :{
+   &quot;corruption&quot;: {
+     &quot;enabled&quot;: true,
+     &quot;cells&quot;: [&quot;row:1&quot;],
+     &quot;style&quot;: {
+      &quot;edgeComplexity&quot;: 0.8,
+      &quot;transparent&quot;: true
+     }
     }
   }
 }
