feat: corruption 효과에 대한 셀 범위 및 차트 오른쪽 끝 처리 개선

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -113,7 +113,7 @@
   &quot;options&quot;: {
     &quot;corruption&quot;: {
         &quot;enabled&quot;: true,
-        &quot;cells&quot;: [&quot;5-9:7-9&quot;],
+        &quot;cells&quot;: [&quot;5-9:7-9, 4-8:7-8, 3-7:7-7, 3-6:6-6, 2-5:5-5, 2-4:4-4&quot;],
         &quot;maskAxisLabels&quot;: false,
         &quot;style&quot;: {
             &quot;edgeComplexity&quot;: 0.7,
