--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,25 +99,20 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [62, 87, 97, 73, 59, 85, 80, 81, 79, 65, 75],
-  &quot;classCount&quot;: 5,
-  &quot;classWidth&quot;: 10,
-  &quot;canvasSize&quot;: 1000,
-  &quot;animation&quot;: true,
+&quot;purpose&quot;: &quot;table&quot;,
+  &quot;tableType&quot;: &quot;cross-table&quot;,
+  &quot;data&quot;: &quot;_\n헤더: 점수(점), 도수(명)\n50^{이상} ~ 60^{미만}: 4\n60 ~ 70: _\n70 ~ 80: 16\n80 ~ 90: _\n90 ~ 100: 3&quot;,
+  &quot;canvasWidth&quot;: 700,
+  &quot;animation&quot;: false,
   &quot;options&quot;: {
-    &quot;showHistogram&quot;: true,
-    &quot;showPolygon&quot;: false,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;histogramColor&quot;: {
-        &quot;fill&quot;: &quot;linear-gradient(180deg, rgba(174, 255, 126, 0.3) 0%, rgba(104, 153, 96, 0.3) 100%)&quot;,
-        &quot;stroke&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;
-        },
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(점수)&quot;,
-      &quot;yAxis&quot;: &quot;(명)&quot;
+    &quot;cross-table&quot;: {
+        &quot;showTotal&quot;: true,
+        &quot;showMergedHeader&quot;: false
     }
-  }
+},
+  &quot;cellVariables&quot;: [
+  {&quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 1, &quot;value&quot;: &quot;40&quot;}
+  ]
 }
 ">
                             </div>
