--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -100,85 +100,21 @@
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
 &quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
-  &quot;classRange&quot;: {
-    &quot;firstEnd&quot;: 1,
-    &quot;secondEnd&quot;: 3,
-    &quot;lastStart&quot;: 13
-  },
-  &quot;unifiedMaxY&quot;: 8,
-  &quot;unifiedClassCount&quot;: 8,
-  &quot;canvasSize&quot;: 700,
+  &quot;data&quot;: &quot;60*5, 80*4, 90*6, 70*3, 50*7&quot;,
+  &quot;classCount&quot;: 5,
+  &quot;classWidth&quot;: 10,
+  &quot;canvasSize&quot;: 600,
   &quot;animation&quot;: true,
   &quot;options&quot;: {
-    &quot;callout&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;template&quot;: &quot;남학생&quot;
-    },
-    &quot;showHistogram&quot;: false,
-    &quot;showPolygon&quot;: true,
+    &quot;showHistogram&quot;: true,
+    &quot;showPolygon&quot;: false,
     &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColorPreset&quot;: &quot;primary&quot;,
+    &quot;histogramColor&quot;: {
+        &quot;fill&quot;: &quot;linear-gradient(180deg, rgba(174, 255, 126, 0.3) 0%, rgba(104, 153, 96, 0.3) 100%)&quot;,
+        &quot;stroke&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;
+        },
     &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(회)&quot;,
-      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
-    }
-  }
-}
-">
-                                </div>
-                                <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 1, 3, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
-  &quot;classRange&quot;: {
-    &quot;firstEnd&quot;: 1,
-    &quot;secondEnd&quot;: 3,
-    &quot;lastStart&quot;: 13
-  },
-  &quot;unifiedMaxY&quot;: 8,
-  &quot;unifiedClassCount&quot;: 8,
-  &quot;canvasSize&quot;: 700,
-  &quot;animation&quot;: true,
-  &quot;options&quot;: {
-    &quot;callout&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;template&quot;: &quot;여학생&quot;
-    },
-    &quot;showHistogram&quot;: false,
-    &quot;showPolygon&quot;: true,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColorPreset&quot;: &quot;secondary&quot;,
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(회)&quot;,
-      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
-    }
-  }
-}
-">
-                                </div>
-                                <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 1, 3, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
-  &quot;classRange&quot;: {
-    &quot;firstEnd&quot;: 1,
-    &quot;secondEnd&quot;: 3,
-    &quot;lastStart&quot;: 13
-  },
-  &quot;unifiedMaxY&quot;: 8,
-  &quot;unifiedClassCount&quot;: 8,
-  &quot;canvasSize&quot;: 700,
-  &quot;animation&quot;: true,
-  &quot;options&quot;: {
-    &quot;callout&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;template&quot;: &quot;여학생&quot;
-    },
-    &quot;showHistogram&quot;: false,
-    &quot;showPolygon&quot;: true,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColorPreset&quot;: &quot;secondary&quot;,
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(회)&quot;,
+      &quot;xAxis&quot;: &quot;점수 구간&quot;,
       &quot;yAxis&quot;: &quot;학생 수(명)&quot;
     }
   }
