--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,31 +99,34 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
-  &quot;classRange&quot;: {
-    &quot;firstStart&quot;: 1,
-    &quot;secondStart&quot;: 3,
-    &quot;lastEnd&quot;: 13
-  },
-  &quot;unifiedMaxY&quot;: 8,
-  &quot;unifiedClassCount&quot;: 8,
-  &quot;canvasSize&quot;: 700,
-  &quot;animation&quot;: true,
+&quot;purpose&quot;: &quot;table&quot;,
+  &quot;tableType&quot;: &quot;basic-table&quot;,
+  &quot;data&quot;: &quot;도수(명)\n헤더: 성적(점), 1반, 2반\n50^{이상}~60^{미만}: 7, 6\n60~70: null, 12\n70~80: 13, null\n80~90: 6, 11\n90~100: 4, 5&quot;,
+  &quot;canvasWidth&quot;: 600,
   &quot;options&quot;: {
-    &quot;callout&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;template&quot;: &quot;남학생&quot;
-    },
-    &quot;showHistogram&quot;: false,
-    &quot;showPolygon&quot;: true,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColorPreset&quot;: &quot;primary&quot;,
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(회)&quot;,
-      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
-    }
-  }
+    &quot;showTotal&quot;: true,
+    &quot;showMergedHeader&quot;: true
+  },
+  &quot;cellVariables&quot;: [
+    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 1, &quot;value&quot;: &quot;40&quot; },
+    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 2, &quot;value&quot;: &quot;50&quot; }
+  ]
+}
+">
+                                </div>
+                                <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
+  &quot;purpose&quot;: &quot;table&quot;,
+  &quot;tableType&quot;: &quot;basic-table&quot;,
+  &quot;data&quot;: &quot;도수(명)\n헤더: 성적(점), 1반, 2반\n50^{이상}~60^{미만}: 7, 6\n60~70: 10, 12\n70~80: 13, null\n80~90: 6, 11\n90~100: 4, 5&quot;,
+  &quot;canvasWidth&quot;: 600,
+  &quot;options&quot;: {
+    &quot;showTotal&quot;: true,
+    &quot;showMergedHeader&quot;: true
+  },
+  &quot;cellVariables&quot;: [
+    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 1, &quot;value&quot;: &quot;40&quot; },
+    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 2, &quot;value&quot;: &quot;50&quot; }
+  ]
 }
 ">
                                 </div>
