--- a/app.html
+++ b/app.html
@@ -33,11 +33,11 @@
 
         <!-- 버튼 그룹 -->
         <div class="button-group">
-          <button id="generateBtn" type="button" aria-label="도수분포표 생성">
-            도수분포표 생성
+          <button id="generateBtn" type="button" aria-label="생성">
+            생성
           </button>
-          <button id="addBtn" type="button" aria-label="도수분포표 추가" class="secondary-btn">
-            + 도수분포표 추가
+          <button id="addBtn" type="button" aria-label="추가" class="secondary-btn">
+            + 추가
           </button>
         </div>
 
