상단 네비게이션 추가

--- a/validator.html
+++ b/validator.html
@@ -25,6 +25,45 @@
       font-family: 'SCDream', -apple-system, BlinkMacSystemFont, sans-serif;
       font-weight: 300;
       line-height: 1.6;
+      padding-top: 44px;
+    }
+
+    /* 상단 네비게이션 */
+    .top-nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 44px;
+      background: #1a1a1e;
+      border-bottom: 1px solid #3a3a42;
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      z-index: 1000;
+      gap: 16px;
+    }
+    .nav-home {
+      color: #888;
+      text-decoration: none;
+      font-size: 13px;
+      padding: 6px 12px;
+      border-radius: 6px;
+      transition: all 0.2s;
+    }
+    .nav-home:hover {
+      color: #eee;
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .nav-title {
+      color: #eee;
+      font-size: 14px;
+      font-weight: 500;
+    }
+    .nav-version {
+      color: #666;
+      font-size: 11px;
+      margin-left: auto;
     }
 
     h1 {
@@ -655,6 +694,13 @@
   </style>
 </head>
 <body>
+  <!-- 상단 네비게이션 -->
+  <nav class="top-nav">
+    <a href="index.html" class="nav-home" title="홈으로">← Hub</a>
+    <span class="nav-title">JSON 동작 검증기</span>
+    <span class="nav-version">v2.5.1</span>
+  </nav>
+
   <!-- 가이드 버튼 그룹 -->
   <div class="guide-btn-group">
     <button class="guide-toggle-btn" id="guideToggleBtn">권장사항 가이드</button>
