--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -101,43 +101,36 @@
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
 &quot;purpose&quot;: &quot;table&quot;,
   &quot;tableType&quot;: &quot;basic-table&quot;,
-  &quot;data&quot;: &quot;도수(명)\n헤더: 성적(점), 1반, 2반\n50^{이상}~60^{미만}: 7, 6\n60~70: null, 12\n70~80: 13, null\n80~90: 6, 11\n90~100: 4, 5&quot;,
-  &quot;canvasWidth&quot;: 600,
+  &quot;data&quot;: &quot;헤더: Class interval, Frequency\n0-4: 3\n5-9: 6\n10-14: 5\n15-19: 4\n20-24:  3\n25-30: 2\n31-34: 1&quot;,
   &quot;options&quot;: {
-    &quot;showTotal&quot;: true,
-    &quot;showMergedHeader&quot;: true
-  },
-  &quot;cellVariables&quot;: [
-    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 1, &quot;value&quot;: &quot;40&quot; },
-    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 2, &quot;value&quot;: &quot;50&quot; }
-  ]
+    &quot;switchColor&quot;: &quot;#ffffff&quot;,
+    &quot;englishFont&quot;: true,
+    &quot;showTotal&quot;: false,
+    &quot;showMergedHeader&quot;: false
+  }
 }
 ">
                                 </div>
                                 <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
   &quot;purpose&quot;: &quot;table&quot;,
   &quot;tableType&quot;: &quot;basic-table&quot;,
-  &quot;data&quot;: &quot;도수(명)\n헤더: 성적(점), 1반, 2반\n50^{이상}~60^{미만}: 7, 6\n60~70: 10, 12\n70~80: 13, 16\n80~90: 6, 11\n90~100: 4, 5&quot;,
-  &quot;canvasWidth&quot;: 600,
-  &quot;canvasWidth&quot;: true,
+  &quot;data&quot;: &quot;헤더: Class, Midpoint, Frequency, Midpoint \\times Frequency\n0-4: 2, 3, 6\n5-9: 7, 6, 42\n10-14: 12, 5, 60\n15-19: 17, 4, 68\n20-24: 22, 3, 66\n25-30: 27, 2, 54\n31-34: 32, 1, 32&quot;,
   &quot;options&quot;: {
+    &quot;switchColor&quot;: &quot;#ffffff&quot;,
+    &quot;englishFont&quot;: true,
     &quot;showTotal&quot;: true,
-    &quot;showMergedHeader&quot;: true
+    &quot;showMergedHeader&quot;: false
   },
   &quot;cellVariables&quot;: [
     {
-      &quot;rowIndex&quot;: 6,
+      &quot;rowIndex&quot;: 8,
       &quot;colIndex&quot;: 1,
-      &quot;value&quot;: &quot;40&quot;
-    },
-    {
-      &quot;rowIndex&quot;: 6,
-      &quot;colIndex&quot;: 2,
-      &quot;value&quot;: &quot;50&quot;
+      &quot;value&quot;: null
     }
   ],
   &quot;cellAnimations&quot;: [
-    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 1 }, {&quot;rowIndex&quot;: 3, &quot;colIndex&quot;: 2}
+   { &quot;colIndex&quot;: 1, &quot;rowStart&quot;: 0, &quot;rowEnd&quot;: 8},
+   { &quot;colIndex&quot;: 3, &quot;rowStart&quot;: 0, &quot;rowEnd&quot;: 8} 
   ]
 }
 ">
