feat: scatter-cases 예제 데이터 변경

--- a/test/scatter-cases.html
+++ b/test/scatter-cases.html
@@ -762,7 +762,7 @@
             pointSize: 6,
             pointColor: '#93DA6A',
             pointHighlights: [
-              { x: 8, y: 10, color: '#54A0F6', scale: 2, label: 'A' }
+              { x: 8, y: 10, color: '#008AFF', scale: 2, label: 'A' }
             ]
           }
         }
@@ -778,8 +778,8 @@
             pointSize: 6,
             pointColor: '#93DA6A',
             pointHighlights: [
-              { x: 5, y: 2, color: '#FF6B6B', scale: 2, label: 'P' },
-              { x: 10, y: 10, color: '#54A0F6', scale: 2, label: 'Q' }
+              { x: 5, y: 2, color: '#008AFF', scale: 2, label: 'P' },
+              { x: 10, y: 10, color: '#E749AF', scale: 2, label: 'Q' }
             ]
           }
         }
@@ -795,9 +795,9 @@
             pointSize: 6,
             pointColor: '#93DA6A',
             pointHighlights: [
-              { x: 4, y: 5, color: '#FF6B6B', scale: 1.8, label: 'A' },
-              { x: 7, y: 7, color: '#FFD93D', scale: 1.8, label: 'B' },
-              { x: 10, y: 10, color: '#54A0F6', scale: 1.8, label: 'C' }
+              { x: 4, y: 5, color: '#008AFF', scale: 1.8, label: 'A' },
+              { x: 7, y: 7, color: '#E749AF', scale: 1.8, label: 'B' },
+              { x: 10, y: 10, color: '#FF764F', scale: 1.8, label: 'C' }
             ]
           }
         }
@@ -830,7 +830,7 @@
               cells: '1-1:5-5'
             },
             pointHighlights: [
-              { x: 100, y: 100, color: '#FF6B6B', scale: 2, label: 'P' }, { x: 50, y: 50, color: '#54A0F6', scale: 2, label: 'Q' }
+              { x: 100, y: 100, color: '#008AFF', scale: 2, label: 'P' }, { x: 50, y: 50, color: '#E749AF', scale: 2, label: 'Q' }
             ]
           }
         }
@@ -873,7 +873,7 @@
             pointColor: '#93DA6A',
             line: true,
             pointHighlights: [
-              { x: 100, y: 100, color: '#FF6B6B', scale: 2, label: 'P' }
+              { x: 100, y: 100, color: '#008AFF', scale: 2, label: 'P' }
             ]
           }
         }
