--- a/test/scatter-cases.html
+++ b/test/scatter-cases.html
@@ -424,7 +424,7 @@
       <div class="case-card" id="case-s12">
         <div class="case-header">
           <h3>S12 - 강조점 3개</h3>
-          <p class="case-desc">여러 점을 다양한 스타일로 강조</p>
+          <p class="case-desc">여러 점을 다양한 스타일로 강조 + 강조점 스케일업 X</p>
         </div>
         <div class="case-canvas" id="canvas-s12"></div>
         <div class="case-controls">
@@ -841,7 +841,7 @@
       },
       s12: {
         title: 'S12 - 강조점 3개',
-        desc: '여러 점을 다양한 스타일로 강조',
+        desc: '여러 점을 다양한 스타일로 강조, 강조점 스케일업 X',
         config: {
           purpose: 'scatter',
           data: [[4, 5], [5, 2], [5, 5], [5, 6], [6, 5], [7, 6], [7, 7], [7, 8], [8, 6], [8, 7], [8, 9], [8, 10], [9, 7], [9, 8], [10, 7], [10, 10]],
@@ -850,9 +850,9 @@
             pointSize: 6,
             pointColor: '#93DA6A',
             pointHighlights: [
-              { x: 4, y: 5, color: '#008AFF', scale: 1.8, label: 'A' },
-              { x: 7, y: 7, color: '#E749AF', scale: 1.8, label: 'B' },
-              { x: 10, y: 10, color: '#FF764F', scale: 1.8, label: 'C' }
+              { x: 4, y: 5, color: '#008AFF', scale: 1, label: 'A' },
+              { x: 7, y: 7, color: '#E749AF', scale: 1, label: 'B' },
+              { x: 10, y: 10, color: '#FF764F', scale: 1, label: 'C' }
             ]
           }
         }
